<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/action_search"
            android:actionViewClass="android.widget.SearchView"
            android:orderInCategory="100"
            android:showAsAction="collapseActionView|always"
            android:title="@string/action_search_channels"
            />

    <item
        android:id="@+id/action_rename_channel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rename_channel"/>

    <item
        android:id="@+id/action_default_channels"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_default_channels"/>

    <item
        android:id="@+id/action_show_import_dialog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_import_dialog"/>


    <item
        android:id="@+id/action_show_export_dialog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_export_dialog"/>


</menu>